# FSAEStats

./: '  .gitignore  Cargo.toml  Dockerfile_bak  fly.toml  race.db  readme.md
csv/: accel.csv  autocross.csv  cost.csv  db.py  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/: main.py  pyproject.toml  race.duckdb
data/csv/competition=michigan/year=2011/: accel.csv  autocross.csv  cost.csv  cost_legacy.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  skid.csv
data/csv/competition=michigan/year=2012/: accel.csv  autocross.csv  cost.csv  cost_legacy.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  skid.csv
data/csv/competition=michigan/year=2013/: accel.csv  autocross.csv  cost.csv  cost_legacy.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/csv/competition=michigan/year=2014/: accel.csv  autocross.csv  cost.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/csv/competition=michigan/year=2015/: accel.csv  autocross.csv  cost.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/csv/competition=michigan/year=2016/: accel.csv  autocross.csv  cost.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/csv/competition=michigan/year=2017/: accel.csv  autocross.csv  cost.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
data/csv/competition=michigan/year=2018/: accel.csv  autocross.csv  cost.csv  design.csv  efficiency.csv  endurance.csv  enduranceLap.csv  overall.csv  presentation.csv  skid.csv  team_information.csv
src/: apply.rs  db_handler.rs  db_structs.rs  event_request_handler.rs  handle_request.rs  lib.rs  main.rs  pipeline.rs  request.rs  request_handler.rs  request_parser.rs  requests.rs  server.rs  validate.rs
util/src/: lib.rs
(+175 files in other folders)
