[package]
name = "FSAEStats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
thiserror = "1.0"
strum = "0.24.1" #lazyness :^)
strum_macros = "0.24.1"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


