[package]
name = "FSAEStats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
thiserror = "1.0"
strum_macros = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
struct_iterable = "0.1.1"
base64 = "0.22.1"
polars = {version="0.53.0", features = ["lazy", "parquet", "is_in"]}
arrow = "58.3.0"
enum_dispatch = "0.3.13"
strum = {version="0.28.0", features=["derive"]}
